# ai-news-podcast

./: .env.example  .gitignore  Makefile  README.md  cto_assessment.md  docker-compose.yml  run_local.sh
.github/workflows/: ci.yml  deploy.yml
docs/: DEPLOYMENT_RUNBOOK.md  DISTRIBUTION_GUIDE.md
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infrastructure/terraform/modules/api-gateway/: lambda_function.py  main.tf
infrastructure/terraform/modules/ecr/: main.tf
infrastructure/terraform/modules/ecs/: main.tf
infrastructure/terraform/modules/s3/: main.tf
infrastructure/terraform/modules/vpc/: main.tf
pipeline/: .env.example  Dockerfile  podcast.db  pyproject.toml  requirements.txt
pipeline/src/: config.py  main.py
pipeline/src/api/: __init__.py  app.py
pipeline/src/audio/: __init__.py  assembler.py
pipeline/src/db/: __init__.py  models.py  session.py
pipeline/src/distribution/: __init__.py  publisher.py
pipeline/src/editorial/: __init__.py  models.py  scriptwriter.py
pipeline/src/ingestion/: __init__.py  deduplicator.py  fetcher.py  models.py  scheduler.py
pipeline/src/tts/: __init__.py  synthesizer.py
pipeline/tests/: test_pipeline.py
