[build-system]
requires = ["setuptools>=74.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-news-podcast-pipeline"
version = "0.1.0"
description = "AI-generated news podcast pipeline"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
